@@ -1,5 +1,6 @@
 ChangeLog
-Ebay.pm
+lib/WWW/Search/Ebay.pm
+lib/WWW/Search/Ebay/ByEndDate.pm
 MANIFEST
 Makefile.PL
 README
