@@ -2,6 +2,8 @@
 # `make test'. After `make install' it should work as `perl test.pl'
 
 use ExtUtils::testlib;
+use WWW::Search;
+use WWW::Search::Test qw( new_engine run_test );
 
 ######################### We start with some black magic to print on failure.
 
@@ -11,9 +13,7 @@ use ExtUtils::testlib;
 # 6 tests without "goto MULTI_RESULT"
 BEGIN { $| = 1; print "1..6\n"; }
 END {print "not ok 1\n" unless $loaded;}
-use WWW::Search::Ebay;
 $loaded = 1;
-print "ok 1\n";
 
 ######################### End of black magic.
 
@@ -21,76 +21,25 @@ print "ok 1\n";
 # (correspondingly "not ok 13") depending on the success of chunk 13
 # of the test code):
 
-my $iTest = 2;
-my $debug = 0;
+$WWW::Search::Test::iTest = 0;
 
-my $sEngine = 'Ebay';
-my $oSearch = new WWW::Search($sEngine);
-print ref($oSearch) ? '' : 'not ';
-print "ok $iTest\n";
-
-use WWW::Search::Test;
+&new_engine('Ebay');
 my $debug = 0;
 
 # This test returns no results (but we should not get an HTTP error):
-$iTest++;
-$oSearch->native_query($WWW::Search::Test::bogus_query);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-print STDOUT (0 < $iResults) ? 'not ' : '';
-print "ok $iTest\n";
-
+&run_test($WWW::Search::Test::bogus_query, 0, 0, $debug);
 # goto MULTI_RESULT;
 $debug = 0;
-
 # This query usually returns 1 page of results:
-$iTest++;
-my $sQuery = 'thurn und taxis';
-$oSearch->native_query(WWW::Search::escape_query($sQuery),
-                         { 'search_debug' => $debug, },
-                      );
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-if (($iResults < 1) || (49 < $iResults))
-  {
-  print STDERR " --- got $iResults results for $sQuery, but expected 1..49\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
-
+&run_test('thurn und taxis', 1, 49, $debug);
 # goto MULTI_RESULT;
 $debug = 0;
-
 # This query usually returns 2 pages of results:
-$iTest++;
-$sQuery = 'bib fortuna';
-$oSearch->native_query(WWW::Search::escape_query($sQuery),
-                         { 'search_debug' => $debug, },
-                      );
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-if (($iResults < 51) || (99 < $iResults))
-  {
-  print STDERR " --- got $iResults results for $sQuery, but expected 51..99\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
+&run_test('bib fortuna', 51, 99, $debug);
 
 MULTI_RESULT:
 $debug = 0;
-
 # This query returns hundreds of pages of results:
-$iTest++;
-$sQuery = 'Star Wars';
-$oSearch->native_query(WWW::Search::escape_query($sQuery),
-                         { 'search_debug' => $debug, },
-                      );
-$oSearch->maximum_to_retrieve(125);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-if ($iResults < 101)
-  {
-  print STDERR " --- got $iResults results for $sQuery, but expected > 101\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
+&run_test('Star Wars', 101, undef, $debug);
+
+&new_engine('Ebay::ByEndDate');
